Fix footer spacing

--- a/_sass/overrides.scss
+++ b/_sass/overrides.scss
@@ -38,7 +38,7 @@ pre.highlight code,
 }
 
 .footer__copyright {
-    margin: 0 20px 10px;
+    margin: 0 20px 20px;
 }
 
 .user-image {
